--- a/password.html
+++ b/password.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width-device-width, intial-scale=1.0">
         <title>login</title>
-        <link rel="stylesheet" href=" reset password.CSS" type="text/CSS"/>
+        <link rel="stylesheet" href=" reset password.css" type="text/CSS"/>
       
     </head>
     <body>
