--- a/password.html
+++ b/password.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width-device-width, intial-scale=1.0">
-        <title>login</title>
-        <link rel="stylesheet" href=" reset password.CSS" type="text/CSS"/>
+        <title>cooking corner</title>
+        <link rel="stylesheet" href=" reset password.css" type="text/css"/>
       
     </head>
     <body>
