--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width-device-width, intial-scale=1.0" />
     <title>cooking Corner</title>
-    <link rel="stylesheet" href="login.CSS" type="text/CSS" />
+    <link rel="stylesheet" href="login.css" type="text/css" />
     <link id="theme" rel="stylesheet" href="theme1.css" type="text/CSS" />
   </head>
   <body>
