--- a/register.html
+++ b/register.html
@@ -82,7 +82,7 @@
             </form>
     <div class="ad-banner">
       <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.postermywall.com%2Findex.php%2Fart%2Ftemplate%2Fe2f77abafcc26a02451ab8baabb8a32f%2Fluxury-car-ads-design-template&psig=AOvVaw1xbn4BXzPC3qLz1YxuM7IU&ust=1714549585760000&source=images&cd=vfe&opi=89978449&ved=0CBQQjhxqFwoTCPj2kqa56YUDFQAAAAAdAAAAABAE">
-        <img src="images\addjomana2.jpg" alt="Advertisement"></a>
+        <img src="addjomana2.jpg" alt="Advertisement"></a>
     </div> 
     <footer> <!--Footer -->
         <div id="footerInfo">
