--- a/index.html
+++ b/index.html
@@ -109,35 +109,35 @@
   <h3>Try deliciousfoods from all over the world </h3>
 <br></br><br></br>
 <br></br>
-<img src="images\sa.jpg" height="300px" > <img src="images\view,jpg.webp" width="300px" height="300px"><img src="images\istockphoto.jpg" width="300px" >
-<img src="images\bbbb.jpg" width="300px" height="300px">
+<img src="sa.jpg" height="300px" > <img src="view,jpg.webp" width="300px" height="300px"><img src="images\istockphoto.jpg" width="300px" >
+<img src="bbbb.jpg" width="300px" height="300px">
 
 <br></br><br></br>
 
 <br></br><br></br>
 <div id="1">
-<img src="images/cake.webp" style="width:400px;"  alt="cake" > 
+<img src="cake.webp" style="width:400px;"  alt="cake" > 
    <div  class="box2"> 
     <h3>carrot-cake-cheesecake</h3>
  <em><b>  You can add food coloring to the frosting, and you can top the frosting with coconut (with or without food coloring added) or chopped nuts.
   <a target="_blank" href="https://www.allrecipes.com/recipe/242024/carrot-cake-cheesecake/">view</a> </b> </em></div>
 </div>
 <div id="2">
-<img src="images/sstake.jpg"style="width:400px;">
+<img src="sstake.jpg"style="width:400px;">
   <div class="box2">   
   <em><b>Tender steak with mashed potatoes and vegetables.
     A delicious and nutritious dish for dinner.Perfect for any occasion. Easy to prepare at home.
     Simple ingredients and delicious results.  <a target="_blank" href="https://natashaskitchen.com/pan-seared-steak/"> view </a> </b> </em></div>
   </div>
   <div id="3">
-      <img src="images/chili.jpg.webp" style="width:400px;" alt="chili" >
+      <img src="chili.jpg.webp" style="width:400px;" alt="chili" >
 
       <div class="box2">
         <h3>chili</h3>
   <em><b>  Whether it's white chicken chili, a spicy beef chili, or just something for the slow cooker, you'll find hundreds of chili recipes that will suit any mood.  <a target="_blank" href="https://www.allrecipes.com/search?q=chili">view</a> </b> </em></div>
 </div>
 <div id="4">
-        <img src="images/Mamaw's Chicken and Rice Casserole.jpg" style="width:400px;" >
+        <img src="Mamaw's Chicken and Rice Casserole.jpg" style="width:400px;" >
         <div class="box2">
      <em><b> <h3>Mamaw's Chicken and Rice Casserole </h3> This recipe may be rich in flavor, but it's made with deliciously cheap ingredients. Here's what you'll need:<ul>
   <li>Chicken Breasts</li>
@@ -147,20 +147,20 @@
     </div>
     <div id="7">
      <div class="banner-container">
-    <div class="banner"> <iframe width="100% " height="600px" src="images/ads.jpg"  alt="meal  ads"></iframe>
+    <div class="banner"> <iframe width="100% " height="600px" src="ads.jpg"  alt="meal  ads"></iframe>
           
       <div class="content">
          <a href="https://www.wixfresh.com/post/food-websites" class="btn">view</a></div>
       </div></div></div>
 <br></br>
 <div id="5">
-                 <img src="images/_Loaded-Waffle-Fries_.webp" style="width: 400px;"  >
+                 <img src="_Loaded-Waffle-Fries_.webp" style="width: 400px;"  >
               <div class="box2">
               <p><em><b>  Top fries with lettuce, tomato, onion, and bacon. Drizzle reserved sauce over the top and serve immediately.if you want to try it ~
 </b><a target="_blank" href="https://www.allrecipes.com/loaded-waffle-fries-recipe-8551264">made it </a> </em></p></div>         
 </div>
 <div id="6">
-<img src="images/v.webp" style="width:400px;">
+<img src="v.webp" style="width:400px;">
              <div class="box2">
              <em><b>  “Super-quick and packed with veg, this is the perfect weeknight dinner fix. Carrots are full of vitamin C, which means this stir-fry will give your immune system a boost and help keep away any coughs and colds. Plus, eggs are a great addition to this otherwise vegan dish. As well as being a source of protein they also contain essential vitamins and minerals, including vitamin D, which a lot of us are guilty of being deficient in. Get your veg prepped first and your pan super-hot and you’re away to go! ” <a href="https://www.jamieoliver.com/recipes/vegetable-recipes/easy-veggie-stir-fry/" >view</a>
 
