--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
           >
           <ul id="dropDownMenu">
             <span
-              ><li><a href="#">Videos</a></li></span
+              ><li><a href="videos">Videos</a></li></span
             >
             <span
-              ><li><a href="#">Recommend</a></li></span
+              ><li><a href="recomindation">Recommend</a></li></span
             >
             <span
-              ><li><a href="#">Cooking tools</a></li></span
+              ><li><a href="page1">Cooking tools</a></li></span
             >
             <span
-              ><li><a href="#">Facts</a></li></span
+              ><li><a href="facts">Facts</a></li></span
             >
             <span
-              ><li><a href="#">Alternatives</a></li></span
+              ><li><a href="alter">Alternatives</a></li></span
             >
           </ul>
         </li>
@@ -73,7 +73,7 @@
       <ul id="links">
         <li><a id="active" href="#">Home</a></li>
         <li><a href="recipies.html">Recipes</a></li>
-        <li><a href="#">Favourites</a></li>
+        <li><a href="favourites">Favourites</a></li>
         <li><a href="mealhistory.html">Meal History</a></li>
         <li><a id="signin-btn" href="login.html">Sign in</a></li>
       </ul>
@@ -109,7 +109,7 @@
   <h3>Try deliciousfoods from all over the world </h3>
 <br></br><br></br>
 <br></br>
-<img src="sa.jpg" height="300px" > <img src="view,jpg.webp" width="300px" height="300px"><img src="images\istockphoto.jpg" width="300px" >
+<img src="sa.jpg" height="300px" > <img src="view,jpg.webp" width="300px" height="300px"><img src="istockphoto.jpg" width="300px" >
 <img src="bbbb.jpg" width="300px" height="300px">
 
 <br></br><br></br>
@@ -166,7 +166,7 @@
 
              <p >click this image to open our table</p></div>
               
-              <a target="_blank" href="https://www.allrecipes.com/recipes/"><img src="images/end.jpg"   margin: 30px; padding: 30px; alt="MORE recipies" > </a>
+              <a target="_blank" href="https://www.allrecipes.com/recipes/"><img src="end.jpg"   margin: 30px; padding: 30px; alt="MORE recipies" > </a>
      </div>
              <br></br><br></br>
              
