--- a/J WEAKLYMEAL.html
+++ b/J WEAKLYMEAL.html
@@ -40,11 +40,11 @@
 
             <div id="navBar">
                 <ul id="links">
-                    <li><a id="active" href="#">Home</a></li>
-                    <li><a href="#">Recipes</a></li>
-                    <li><a href="#">Favourites</a></li>
-                    <li><a href="#">Meal History</a></li>
-                    <li><a id="signin-btn" href="#">Sign in</a></li>
+                    <li><a id="active" href="index.html">Home</a></li>
+                    <li><a href="recipies.html">Recipes</a></li>
+                    <li><a href="favourite.html">Favourites</a></li>
+                    <li><a href="page2.html">Meal History</a></li>
+                    <li><a id="signin-btn" href="login.html">Sign in</a></li>
 
                 </ul>
             </div>
