--- a/favourite.html
+++ b/favourite.html
@@ -32,11 +32,11 @@
                           <span class="text">MENU</span>
                       </button></span>
                     <ul id="dropDownMenu"> 
-                      <span><li><a href="#">Videos</a></li></span>
-                      <span><li><a href="#">Recommend</a></li></span>
-                      <span><li><a href="#">Cooking tools</a></li></span> 
-                      <span><li><a href="#">Facts</a></li></span>              
-                      <span><li><a href="#">Alternatives</a></li></span>
+                      <span><li><a href="videos">Videos</a></li></span>
+                      <span><li><a href="recomendation">Recommend</a></li></span>
+                      <span><li><a href="page1">Cooking tools</a></li></span> 
+                      <span><li><a href="facts">Facts</a></li></span>              
+                      <span><li><a href="alter">Alternatives</a></li></span>
                      </ul>
                   </li>
               </ul>
@@ -44,10 +44,10 @@
 
           <div id="navBar">
               <ul id="links">
-                  <li><a id="active" href="#">Home</a></li>
-                  <li><a href="#">Recipes</a></li>
-                  <li><a href="#">Favourites</a></li>
-                  <li><a href="#">Meal History</a></li>
+                  <li><a id="active" href="index.html">Home</a></li>
+                  <li><a href="recipes">Recipes</a></li>
+                  <li><a href="favourite">Favourites</a></li>
+                  <li><a href="page2">Meal History</a></li>
                   <li><a id="signin-btn" href="login.html">Sign in</a></li>
 
               </ul>
@@ -107,7 +107,7 @@
         </div>
   
         <div>
-          <a href="#">feedback<a>
+          <a href="feedback from2">feedback<a>
           
         </div>
   
