--- a/alter.html
+++ b/alter.html
@@ -27,11 +27,12 @@
                             <span class="text">MENU</span>
                         </button></span>
                       <ul id="dropDownMenu"> 
-                        <span><li><a href="#">Videos</a></li></span>
-                        <span><li><a href="#">Recommend</a></li></span>
-                        <span><li><a href="#">Cooking tools</a></li></span> 
-                        <span><li><a href="#">Facts</a></li></span>              
-                        <span><li><a href="#">Alternatives</a></li></span>
+                        <span><li><a href="Videos">Videos</a></li></span>
+                        <span><li><a href="J WEAKLYMEAL.html">weekly meal</a></li></span>
+                        <span><li><a href="recomindation.html">Recommend</a></li></span>
+                        <span><li><a href="page1.html">Cooking tools</a></li></span> 
+                        <span><li><a href="facts.html">Facts</a></li></span>              
+                        <span><li><a href="alter.html">Alternatives</a></li></span>
                        </ul>
                     </li>
                 </ul>
@@ -40,9 +41,9 @@
             <div id="navBar">
                 <ul id="links">
                     <li><a id="active" href="index.html">Home</a></li>
-                    <li><a href="#">Recipes</a></li>
-                    <li><a href="#">Favourites</a></li>
-                    <li><a href="#">Meal History</a></li>
+                    <li><a href="recipies.html">Recipes</a></li>
+                    <li><a href="favourite.html">Favourites</a></li>
+                    <li><a href="page2.html">Meal History</a></li>
                     <li><a id="signin-btn" href="login.html">Sign in</a></li>
 
                 </ul>
@@ -133,7 +134,7 @@
         </div>
   
         <div>
-          <a href="#">feedback<a>
+          <a href="feedback form2.html">feedback<a>
           <a>Terms Of Use</a>
           <a>Contact Us</a>
           <a>Privacy Policy</a>
