--- a/feedback form2.html
+++ b/feedback form2.html
@@ -45,19 +45,19 @@
           >
           <ul id="dropDownMenu">
             <span
-              ><li><a href="#">Videos</a></li></span
+              ><li><a href="videos">Videos</a></li></span
             >
             <span
-              ><li><a href="#">Recommend</a></li></span
+              ><li><a href="recomindation">Recommend</a></li></span
             >
             <span
-              ><li><a href="#">Cooking tools</a></li></span
+              ><li><a href="page1">Cooking tools</a></li></span
             >
             <span
-              ><li><a href="#">Facts</a></li></span
+              ><li><a href="facts">Facts</a></li></span
             >
             <span
-              ><li><a href="#">Alternatives</a></li></span
+              ><li><a href="alter">Alternatives</a></li></span
             >
           </ul>
         </li>
@@ -68,8 +68,8 @@
       <ul id="links">
         <li><a id="active" href="index.html">Home</a></li>
         <li><a href="recipies.html">Recipes</a></li>
-        <li><a href="#">Favourites</a></li>
-        <li><a href="mealhistory.html">Meal History</a></li>
+        <li><a href="favourite">Favourites</a></li>
+        <li><a href="page2">Meal History</a></li>
         <li><a id="signin-btn" href="login.html">Sign in</a></li>
       </ul>
     </div>
@@ -88,7 +88,7 @@
 
 <br></br>  <br></br>  <br></br>  
 <div class="rat">
-<img src="images\feedback.jpg" ></div>
+<img src="feedback.jpg" ></div>
 
 <br></br>  <br></br>  <br></br>  
 
@@ -136,7 +136,7 @@
     <h5><a target="self" href="feedback form2.html">Feedback</a></h5>
    
   </div>
-  
+  <div>  <a herf=" feedback form2.html "><h4>feedback</h4> </div></a>
 
   <div>
     <h5>Follow Us</h5>
