--- a/recipies.html
+++ b/recipies.html
@@ -48,19 +48,19 @@
                 >
                 <ul id="dropDownMenu">
                   <span
-                    ><li><a href="#">Videos</a></li></span
+                    ><li><a href="videos">Videos</a></li></span
                   >
                   <span
-                    ><li><a href="#">Recommend</a></li></span
+                    ><li><a href="recomindation">Recommend</a></li></span
                   >
                   <span
-                    ><li><a href="#">Cooking tools</a></li></span
+                    ><li><a href="page1">Cooking tools</a></li></span
                   >
                   <span
-                    ><li><a href="#">Facts</a></li></span
+                    ><li><a href="facts">Facts</a></li></span
                   >
                   <span
-                    ><li><a href="#">Alternatives</a></li></span
+                    ><li><a href="alter">Alternatives</a></li></span
                   >
                 </ul>
               </li>
@@ -101,7 +101,7 @@
         </section>
         <section class="recipe" id="pizza">
             <h2>Pizza</h2>
-            <img src=" images\PIZZAR.jpg   "alt="" width="200px " height="200px" >
+            <img src="PIZZAR.jpg "alt="" width="200px " height="200px" >
             <p class="description">  Start with a crust. ...
                 Add a sauce. ...
                 Add some veggies, such as:
@@ -114,7 +114,7 @@
         </section>
         <section class="recipe" id="pasta">
             <h2>Pasta</h2>
-            <img src="   images\PASSTAR.jpg  "alt="" width="200px " height="200px" >
+            <img src=" PASSTAR.jpg  "alt="" width="200px " height="200px" >
             <p class="description"> Step 1: Boil Water. Start with a very large pot of water, about 6 quarts per pound of pasta. ...
                 Step 2: Add Salt. Put in a lot of salt, about 3 tablespoons. ...
                 Step 3: Add the Pasta. ...
@@ -127,7 +127,7 @@
         </section>
         <section class="recipe" id="salmon">
             <h2>Salmon</h2>
-            <img src="   images\SALAMONR.jpg  "alt="" width="200px " height="200px" >
+            <img src=" SALAMONR.jpg  "alt="" width="200px " height="200px" >
             <p class="description">  Pan-fried. A quick and easy way to cook salmon is to pan-fry it. ...
                 Roasted. Another easy recipe is roasted salmon in the oven. ...
                 Broiled. Another oven baked salmon recipe is broiled salmon. ...
@@ -140,7 +140,7 @@
         </section>
         <section class="recipe" id="steak">
             <h2>Steak</h2>
-            <img src=" images\MEATR.jpg   "alt="" width="200px " height="200px" >
+            <img src=" MEATR.jpg   "alt="" width="200px " height="200px" >
             <p class="description"> Prep the steaks. Remove the steaks from the refrigerator about 30 minutes to 1 hour before cooking. ...
                 Prepare the rest of the ingredients. ...
                 Season the steaks. ...
@@ -153,7 +153,7 @@
         </section>
         <section class="recipe" id="chicken">
             <h2>Chicken</h2>
-            <img src="images\CHICKENR.jpg    "alt="" width="200px " height="200px">
+            <img src="CHICKENR.jpg    "alt="" width="200px " height="200px">
             <p class="description"> Cook them right. Most people get scared and overcook chicken breasts, cooking out all the moisture and leaving them tough and dry. ...
                 Marinate them. ...
                 Cut them thin. ...
@@ -176,7 +176,7 @@
          
         </div>
         
-  
+  <div><a href="feedback form2"><h4>feedback</h4></div>
         <div>
           <h5>Follow Us</h5>
           <a>Facebook</a>
