--- a/login.html
+++ b/login.html
@@ -48,19 +48,21 @@
               >
               <ul id="dropDownMenu">
                 <span
-                  ><li><a href="#">Videos</a></li></span
+                  ><li><a href="Videos.html">Videos</a></li></span
                 >
                 <span
-                  ><li><a href="#">Recommend</a></li></span
+                  ><li><a href="J WEAKLYMEAL.html">weekly meal</a></li></span>
+                <span
+                  ><li><a href="recomindation.html">Recommend</a></li></span
                 >
                 <span
-                  ><li><a href="#">Cooking tools</a></li></span
+                  ><li><a href="page1.html">Cooking tools</a></li></span
                 >
                 <span
-                  ><li><a href="#">Facts</a></li></span
+                  ><li><a href="facts.html">Facts</a></li></span
                 >
                 <span
-                  ><li><a href="#">Alternatives</a></li></span
+                  ><li><a href="alter.html">Alternatives</a></li></span
                 >
               </ul>
             </li>
@@ -69,10 +71,10 @@
 
         <div id="navBar">
           <ul id="links">
-            <li><a id="active" href="#">Home</a></li>
-            <li><a href="#">Recipes</a></li>
-            <li><a href="#">Favourites</a></li>
-            <li><a href="#">Meal History</a></li>
+            <li><a id="active" href="index.html">Home</a></li>
+            <li><a href="recipies.html">Recipes</a></li>
+            <li><a href="favourite.html">Favourites</a></li>
+            <li><a href="page2.html">Meal History</a></li>
             <li><a id="signin-btn" href="login.html">Sign in</a></li>
           </ul>
         </div>
@@ -134,7 +136,7 @@
   <br></br><br></br><br></br>
     <div class="ad-banner">
     <a href="https://www.google.com/imgres?q=audi%20ad&imgurl=https%3A%2F%2Fwww.audi.com%2Fcontent%2Fdam%2Fci%2FGuides%2FCommunication_Media%2FAdvertisements%2F02_Andwendungsbeispiele%2Faudi-ci-communication-media-advertisements-example3_V2.png%3Fimwidth%3D2400&imgrefurl=https%3A%2F%2Fwww.audi.com%2Fci%2Fen%2Fguides%2Fcommunication-media%2Fadvertisements.html&docid=1Boh6xDCD7nriM&tbnid=HagH90JnthnvIM&vet=12ahUKEwjB_PqdyeiFAxWS0wIHHYS1Bn0QM3oECGMQAA..i&w=2400&h=1697&hcb=2&ved=2ahUKEwjB_PqdyeiFAxWS0wIHHYS1Bn0QM3oECGMQAA">
-      <img src="images\ad jomana1.jpg" alt="Advertisement"></a>
+      <img src="ad jomana1.jpg" alt="Advertisement"></a>
   </div>  
     <footer id="footer">
       <div id="footerInfo">
@@ -142,7 +144,7 @@
       </div>
 
       <div>
-        <a href="#">feedback<a>
+        <a href="feedback form2.html">feedback<a>
         <a>Terms Of Use</a>
         <a>Contact Us</a>
         <a>Privacy Policy</a>
