--- a/page1.html
+++ b/page1.html
@@ -166,19 +166,19 @@
             >
             <ul id="dropDownMenu">
               <span
-                ><li><a href="#">Videos</a></li></span
+                ><li><a href="videos">Videos</a></li></span
               >
               <span
-                ><li><a href="#">Recommend</a></li></span
+                ><li><a href="recomindations">Recommend</a></li></span
               >
               <span
-                ><li><a href="#">Cooking tools</a></li></span
+                ><li><a href="page1">Cooking tools</a></li></span
               >
               <span
-                ><li><a href="#">Facts</a></li></span
+                ><li><a href="facts">Facts</a></li></span
               >
               <span
-                ><li><a href="#">Alternatives</a></li></span
+                ><li><a href="alter">Alternatives</a></li></span
               >
             </ul>
           </li>
@@ -186,10 +186,10 @@
       </div>
         <div id="navBar">
         <ul id="links">
-          <li><a id="active" href="#">Home</a></li>
+          <li><a id="active" href="index">Home</a></li>
           <li><a href="#">Recipes</a></li>
-          <li><a href="#">Favourites</a></li>
-          <li><a href="#">Meal History</a></li>
+          <li><a href="favourite">Favourites</a></li>
+          <li><a href="page2">Meal History</a></li>
           <li><a id="signin-btn" href="login.html">Sign in</a></li>
         </ul>
       </div>
@@ -247,10 +247,9 @@
       </div>
 
       <div>
-        <h5>Company</h5>
-        <a>Terms Of Use</a>
-        <a>Contact Us</a>
-        <a>Privacy Policy</a>
+	<a href="feedback form2" >
+	<h1> feedback </h1>
+	</a>
       </div>
 
       <div>
