--- a/password.html
+++ b/password.html
@@ -7,12 +7,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width-device-width, intial-scale=1.0">
         <title>Cooking Corner</title>
-        <link rel="stylesheet" href=" reset password.CSS" type="text/CSS"/>
+        <link rel="stylesheet" href=" reset password.css" type="text/CSS"/>
 
       
     </head>
     <body>
-        <div style="height: 1000px; margin-top: 200px">
+        <div style="height: 600px; margin-top: 200px">
             <div id="text">
               <h2 style="color: black">jomana mahmoud elsaghier ahmed<br>20230147</h2>
         </div>
