--- a/page2.html
+++ b/page2.html
@@ -163,7 +163,7 @@ transform: scale(2);
           <div id="navBar">
           <ul id="links">
             <li><a id="active" href="index">Home</a></li>
-            <li><a href="recipes">Recipes</a></li>
+            <li><a href="recipies">Recipes</a></li>
             <li><a href="favourites">Favourites</a></li>
             <li><a href="page2">Meal History</a></li>
             <li><a id="signin-btn" href="login.html">Sign in</a></li>
