--- a/page1.html
+++ b/page1.html
@@ -187,7 +187,7 @@
         <div id="navBar">
         <ul id="links">
           <li><a id="active" href="index">Home</a></li>
-          <li><a href="#">Recipes</a></li>
+          <li><a href="recipies">Recipes</a></li>
           <li><a href="favourite">Favourites</a></li>
           <li><a href="page2">Meal History</a></li>
           <li><a id="signin-btn" href="login.html">Sign in</a></li>
