--- a/page1.html
+++ b/page1.html
@@ -166,7 +166,7 @@
             >
             <ul id="dropDownMenu">
               <span
-                ><li><a href="videos">Videos</a></li></span
+                ><li><a href="Videos">Videos</a></li></span
               >
               <span
                 ><li><a href="recomindations">Recommend</a></li></span
