--- a/page1.html
+++ b/page1.html
@@ -169,7 +169,7 @@
                 ><li><a href="Videos">Videos</a></li></span
               >
               <span
-                ><li><a href="recomindations">Recommend</a></li></span
+                ><li><a href="recomindation">Recommend</a></li></span
               >
               <span
                 ><li><a href="page1">Cooking tools</a></li></span
