--- a/page2.html
+++ b/page2.html
@@ -145,7 +145,7 @@ transform: scale(2);
                   ><li><a href="videos">Videos</a></li></span
                 >
                 <span
-                  ><li><a href="recomindations">Recommend</a></li></span
+                  ><li><a href="recomindation">Recommend</a></li></span
                 >
                 <span
                   ><li><a href="page1">Cooking tools</a></li></span
