--- a/Videos.html
+++ b/Videos.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cooking Videos</title>
   <link rel="stylesheet" href="video.css">
-  <link rel="stylesheet" href="theme1.css" id="theme"/>
+  <link id="theme" rel="stylesheet" href="theme1.css" />
 
 </head>
 <body>
