--- a/recomindation.html
+++ b/recomindation.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width-device-width, initial-scale=1.0" />
-    <link id="theme" href="reco.css" rel="stylesheet" type="text/CSS"/>
+    <link id="theme" href="theme1.css" rel="stylesheet" type="text/CSS"/>
       </head>
       <header id="header">
         <nav>
@@ -31,11 +31,13 @@
                             <span class="text">MENU</span>
                         </button></span>
                       <ul id="dropDownMenu"> 
-                        <span><li><a href="#">Videos</a></li></span>
-                        <span><li><a href="#">Recommend</a></li></span>
-                        <span><li><a href="#">Cooking tools</a></li></span> 
-                        <span><li><a href="#">Facts</a></li></span>              
-                        <span><li><a href="#">Alternatives</a></li></span>
+                        <span><li><a href="Videos.html">Videos</a></li></span>
+                        <span
+                  ><li><a href="J WEAKLYMEAL.html">weekly meal</a></li></span>
+                        <span><li><a href="recomindations.html">Recommend</a></li></span>
+                        <span><li><a href="page1.html">Cooking tools</a></li></span> 
+                        <span><li><a href="facts.html">Facts</a></li></span>              
+                        <span><li><a href="alter.html">Alternatives</a></li></span>
                        </ul>
                     </li>
                 </ul>
@@ -43,10 +45,10 @@
 
             <div id="navBar">
                 <ul id="links">
-                    <li><a id="active" href="#">Home</a></li>
-                    <li><a href="#">Recipes</a></li>
-                    <li><a href="#">Favourites</a></li>
-                    <li><a href="#">Meal History</a></li>
+                    <li><a id="active" href="index.html">Home</a></li>
+                    <li><a href="recipies.html">Recipes</a></li>
+                    <li><a href="favourite.html">Favourites</a></li>
+                    <li><a href="page2.html">Meal History</a></li>
                     <li><a id="signin-btn" href="login.html">Sign in</a></li>
 
                 </ul>
@@ -75,49 +77,49 @@
    <div class=" container">
       <h3 style="font-style: oblique ; "> Gannat Saber Ali <p style="font-style: oblique;"> ID: 20230150</p></h3>
      <div class=" gallery">
-      <a href="images\55g.jpg" data-lightbox="our recommendations for some dishes " data-title="our recommendations for some dishes " >
-         <img src="images\55g.jpg" alt=" ">
+      <a href="55g.jpg" data-lightbox="our recommendations for some dishes " data-title="our recommendations for some dishes " >
+         <img src="55g.jpg" alt=" ">
       </a>
          <div class=" title">
             <ul>Honey Mustard Potatoes </ul>
          </div>
-         <a href="images\22.jpg" data-lightbox="our recommendations for some dishes "  data-title="our recommendations for some dishes">
-         <img src="images\22.jpg" alt="">
+         <a href="22.jpg" data-lightbox="our recommendations for some dishes "  data-title="our recommendations for some dishes">
+         <img src="22.jpg" alt="">
       </a>
          <div class=" title"><p> lemon Herb Roasted Chicken</p>
          </div>
-         <a href="imags/American hot deep-pan pizza.jpg" data-lightbox="our recommendations for some dishes "  data-title="our recommendations for some dishes">
-         <img src="images\33g.jpg" alt="">
+         <a href="American hot deep-pan pizza.jpg" data-lightbox="our recommendations for some dishes "  data-title="our recommendations for some dishes">
+         <img src="33g.jpg" alt="">
       </a>
          <div class=" title">
             <p> American hot deep-pan pizza </p>
          </div>
-         <a href="images\88g.jpg" data-lightbox="our recommendations for some dishes "  data-title="our recommendations for some dishes">
-         <img src="images\88g.jpg" alt="">
+         <a href="88g.jpg" data-lightbox="our recommendations for some dishes "  data-title="our recommendations for some dishes">
+         <img src="88g.jpg" alt="">
       </a>
          <div class=" title">
             <p> Chicken Tikka Masala </p>
          </div>
-         <a href="imags/Chinese-Style Arrabiata Pasta (Two Ways).jpg" data-lightbox="our recommendations for some dishes "  data-title="our recommendations for some dishes">
-         <img src="images\55g.jpg" alt="">
+         <a href="Chinese-Style Arrabiata Pasta (Two Ways).jpg" data-lightbox="our recommendations for some dishes "  data-title="our recommendations for some dishes">
+         <img src="55g.jpg" alt="">
       </a>
          <div class=" title">
             <p> Chinese-Style Arrabiata Pasta </p>
          </div>
-         <a href="imags/Creamy Cauliflower Soup.jpg" data-lightbox="our recommendations for some dishes "  data-title="our recommendations for some dishes">
-         <img src="images\66g.jpg" alt="">
+         <a href="Creamy Cauliflower Soup.jpg" data-lightbox="our recommendations for some dishes "  data-title="our recommendations for some dishes">
+         <img src="66g.jpg" alt="">
       </a>
          <div class=" title">
             <p> Creamy Cauliflower Soup </p>
          </div>
-         <a href="images\pasta g.jpg" data-lightbox="our recommendations for some dishes "  data-title="our recommendations for some dishes">
-         <img src="images\pasta g.jpg" alt="">
+         <a href="pasta g.jpg" data-lightbox="our recommendations for some dishes "  data-title="our recommendations for some dishes">
+         <img src="pasta g.jpg" alt="">
       </a>
          <div class=" title">
             <p> Garlic Butter Chicken and Potatoes Skillet </p>
          </div>
-         <a href="images\soub g.jpg" data-lightbox="our recommendations for some dishes "  data-title="our recommendations for some dishes">
-         <img src="images\soub g.jpg" alt="">
+         <a href="soub g.jpg" data-lightbox="our recommendations for some dishes "  data-title="our recommendations for some dishes">
+         <img src="soub g.jpg" alt="">
       </a>
          <div class=" title">
             <p> Creme Fraiche Salmon Pasta </p>
@@ -130,7 +132,7 @@
     </div>
 
     <div>
-      <a href="#">feedback<a>
+      <a href="feedback form2.html">feedback<a>
       
     </div>
 
