--- a/recipies.html
+++ b/recipies.html
@@ -69,10 +69,10 @@
       
           <div id="navBar">
             <ul id="links">
-              <li><a id="active" href="#">Home</a></li>
-              <li><a href="#">Recipes</a></li>
-              <li><a href="#">Favourites</a></li>
-              <li><a href="#">Meal History</a></li>
+              <li><a id="active" href="index">Home</a></li>
+              <li><a href="recipies">Recipes</a></li>
+              <li><a href="favourite">Favourites</a></li>
+              <li><a href="page2">Meal History</a></li>
               <li><a id="signin-btn" href="login.html">Sign in</a></li>
             </ul>
           </div>
@@ -89,7 +89,7 @@
     <main>
         <section class="recipe" id="rice">
             <h2>Rice</h2>
-            <img src=" images\RICER.jpg   "alt="" width="200px " height="200px" >
+            <img src=" RICER.jpg   "alt="" width="200px " height="200px" >
             <p class="description"> Rinse the rice.
                 Use the right ratio of water. Add 2 parts water and 1 part rice to a large pot. ...
                 Bring the water to a boil. Once it's boiling, add a big pinch of salt.
