--- a/recipies.html
+++ b/recipies.html
@@ -48,7 +48,7 @@
                 >
                 <ul id="dropDownMenu">
                   <span
-                    ><li><a href="videos">Videos</a></li></span
+                    ><li><a href="Videos">Videos</a></li></span
                   >
                   <span
                     ><li><a href="recomindation">Recommend</a></li></span
